add voip client token endpoint to BE
